<resources>
    <string name="app_name">Sizzling Bites</string>
    <string name="your_order_is_ready_for_pickup">Your order is ready for pickup</string>
    <string name="ready_for_pickup">Ready for Pickup</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="order_processed">Order Processed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_placed">Order Placed</string>
    <string name="_123456">#123456</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_number">Order Number</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="cancel">Cancel</string>
    <string name="track_order">Track Order</string>
    <string name="welcome_to_mcdonalds">Welcome to McDonalds\'</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="invalid_name">Please enter a valid name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email">Enter a valid mail</string>

    <string name="facebook_app_id">234947591539923</string>
    <string name="fb_login_protocol_scheme">fb234947591539923</string>

    <string name="partnerKey">bvd4Ga8a99a8794214a0b8332961fcf465534</string>

    <string name="copy_right" translatable="false">Copyrights © %1$d</string>

</resources>